--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,7 @@
     </header>
     <main class="content">
       <section class="profile page__section">
-        <div class="profile__image" style="
-              background-image: url('<%= require('./images/avatar.jpg') %>');
-            "></div>
+          <div class="profile__image" style="background-image: url('<%= require('./images/avatar.jpg') %>');"></div>
         <div class="profile__info">
           <h1 class="profile__title">Жак-Ив Кусто</h1>
           <button class="profile__edit-button" type="button"></button>
@@ -33,34 +31,102 @@
     <footer class="footer page__section">
       <p class="footer__copyright">© 2021 Mesto Russia</p>
     </footer>
+
     <div class="popup popup_type_edit">
       <div class="popup__content">
         <button type="button" class="popup__close"></button>
         <h3 class="popup__title">Редактировать профиль</h3>
-        <form class="popup__form" name="edit-profile">
-          <input  type="text" name="name" class="popup__input popup__input_type_name" placeholder="Имя" required />
-          <input type="text" name="description" class="popup__input popup__input_type_description" placeholder="Занятие"
-            required />
+        <form class="popup__form" name="edit-profile" novalidate>
+          <label class="form__fild">
+            <input 
+              required
+              type="text"
+              name="name"
+              class="popup__input popup__input_type_name"
+              id="name-input"
+              placeholder="Имя"
+              minlength="2"
+              maxlength="40"
+              data-error-message ="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
+              pattern="[a-zA-Zа-яА-ЯёЁ \-]+"
+            >
+            <span id="name--error" class="message-error"></span>
+          </label>
+          <label class="form__fild">
+           <input
+              required 
+              type="text"
+              name="description"
+              class="popup__input popup__input_type_description"
+              id="description-input"
+              placeholder="Занятие"
+              minlength="2"
+              maxlength="200"
+              data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
+              pattern="[a-zA-Zа-яА-ЯёЁ \-]+"
+          >
+          <span id="description--error" class="message-error"></span>
+          </label> 
           <button type="submit" class="button popup__button">
             Сохранить
           </button>
         </form>
       </div>
     </div>
+
     <div class="popup popup_type_new-card">
       <div class="popup__content">
         <button type="button" class="popup__close"></button>
         <h3 class="popup__title">Новое место</h3>
-        <form class="popup__form" name="new-place">
-          <input type="text" name="place-name" class="popup__input popup__input_type_card-name" placeholder="Название"
-            required />
-          <input type="url" name="link" class="popup__input popup__input_type_url" placeholder="Ссылка на картинку"
-            required />
+        <form class="popup__form" name="new-place" novalidate>
+          <label class="form__fild">
+            <input 
+              type="text"
+              name="place-name"
+              class="popup__input popup__input_type_card-name"
+              placeholder="Название"
+              required 
+            >
+            <span id="place-name--error" class="message-error"></span>
+          </label>
+          <label class="form__fild">
+            <input 
+              type="url"
+              name="link"
+              class="popup__input popup__input_type_url"
+              placeholder="Ссылка на картинку"
+              required
+            >
+            <span id="link--error" class="message-error"></span>
+          </label>
           <button type="submit" class="button popup__button">
             Сохранить
           </button>
         </form>
       </div>
+    </div>
+  
+    <div class="popup popup_type_new-avatar">
+      <div class="popup__content">
+        <button type="button" class="popup__close"></button>
+        <h3 class="popup__title">Обновить аватар</h3>
+        <form class="popup__form" name="new-avatar" novalidate>
+          <label class="form__fild">
+            <input 
+              type="url"
+              name="link"
+              class="popup__input popup__input_type_url"
+              placeholder="Ссылка на картинку"
+              required
+            >
+            <span id="link--error" class="message-error"></span>
+          </label>
+          <button type="submit" class="button popup__button">
+            Сохранить
+          </button>
+        </form>
+      </div>
+  
     </div>
     <div class="popup popup_type_image">
       <div class="popup__content popup__content_content_image">
@@ -77,7 +143,10 @@
       <button type="button" class="card__delete-button"></button>
       <div class="card__description">
         <h2 class="card__title"></h2>
-        <button type="button" class="card__like-button"></button>
+        <div class="card__like">
+          <button type="button" class="card__like-button"></button>
+          <span class="card__count-like"></span>
+        </div>
       </div>
     </li>
   </template>
